src/objects/Account_Dimension_Tag__c.object
<CustomObject>
    <fields>
        <fullName>Dim_Tag_Id__c</fullName>
        <label>Dim Tag Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Tags</relationshipLabel>
        <relationshipName>Account_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Removal Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Tags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_for_Removal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request for Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <label>Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Visibility</valueSetName>
        </valueSet>
    </fields>
    <label>Account Tag</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tag__c</columns>
        <columns>Record_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{00000}</displayFormat>
        <label>Account Tag Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>